--- a/circle.yml
+++ b/circle.yml
@@ -12,4 +12,4 @@ deployment:
     branch: master
     commands:
       - echo 'Deploying'
-      - ./scripts/deploy.sh
+      - bash ./scripts/deploy.sh
